# PPCalendar

./: .gitignore  CodeStyleGuide.md  HOWTO.md  README.md  pyproject.toml
src/ppcalendar/: __init__.py  events.py  main.py  ppcalendar.py
