[project]
name = "ppcalendar"
version = "0.2.3"
description = "Beautiful terminal calendar with seasonal colors"
readme = "README.md"
authors = [{name = "Sergey Samoylov", email = "linews@yandex.ru"}]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.scripts]
ppcal = "ppcalendar.main:main_cli"
cal = "ppcalendar.main:main_cli"

[build-system]
requires = ["setuptools>=65.5.1", "uv>=0.1.0"]
build-backend = "setuptools.build_meta"
